# casbin-flamegraph

./: Cargo.toml  README.md
src/: main.rs
